# youtube-playlist-tools

./: .gitignore  README.md  changelog.md  pyproject.toml  run.sh
youtube_playlist_tools/: config.json  config.template.json
youtube_playlist_tools/src/: main.py  manage_playlists.py
